--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,5 +9,9 @@
 //Layouts
 @import "./Layouts/header";
 @import "./Layouts/footer";
-
+@import "./Layouts/cover";
+@import "./Layouts/intro";
+@import "./Layouts/cover";
+@import "./Layouts/foodmenu";
+@import "./Layouts/feedback";
 //Components
