--- a/src/scss/Helpers/_variables.scss
+++ b/src/scss/Helpers/_variables.scss
@@ -1,5 +1,15 @@
 // ---------- COLOR ----------------
+$color-green-1: #0f9d58;
+$color-green-light: #0fa267;
 
+$color-white-1: #fff9ef;
+$color-white-2: #fff;
+$color-white-3: #f0f3f7;
+
+$color-gray-1: #7a7a7b;
+
+$color-black-1: #000021;
+$color-black-2: #000000;
 // ---------- FONT ----------------
 $font-size-html: 16px;
 $fs-1: 10px;
