--- a/src/scss/Base/_reset.scss
+++ b/src/scss/Base/_reset.scss
@@ -1,11 +1,15 @@
 * {
+  font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
+body,
 html {
   font-size: $font-size-html;
   scroll-behavior: smooth;
+  position: relative;
 }
 
 img {
@@ -14,6 +18,7 @@ img {
 }
 
 a {
+  color: unset;
   text-decoration: none;
 }
 
@@ -34,9 +39,4 @@ h5,
 h6 {
   margin: 0;
   padding: 0;
-}
-
-body {
-  font-family: "Poppins", sans-serif;
-  line-height: 1;
 }
