--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,9 +9,8 @@
 //Layouts
 @import "./Layouts/header";
 @import "./Layouts/footer";
-@import "./Layouts/cover";
-@import "./Layouts/intro";
-@import "./Layouts/cover";
+@import "./Layouts/about";
+@import "./Layouts/home";
 @import "./Layouts/foodmenu";
-@import "./Layouts/feedback";
+@import "./Layouts/testimonials";
 //Components
