--- a/src/scss/Helpers/_variables.scss
+++ b/src/scss/Helpers/_variables.scss
@@ -25,8 +25,9 @@ $font-weight-normal: normal;
 $font-weight-300: 300;
 $font-weight-500: 500;
 $font-weight-600: 600;
+$font-weight-700: 700;
 // ---------- PADDING ----------------
-$pd-1: 15px;
+$pd-1: 12px;
 $pd-2: 20px;
 $pd-3: 25px;
 $pd-4: 30px;
@@ -49,7 +50,7 @@ $mr-10: 170px;
 
 // ---------- BORDER ----------------
 $border-radius: 20px;
-$border-radius-1: 14px;
+$border-radius-1: 16px;
 $border-radius-2: 30px;
 
 // ---------- LINE-HEIGHT ----------------
