--- a/src/scss/Helpers/_mixin.scss
+++ b/src/scss/Helpers/_mixin.scss
@@ -5,11 +5,10 @@
   line-height: $lh;
 }
 
-@mixin borderText(){
+@mixin borderText($pd-y, $pd-x) {
   color: $color-white-1;
   background-color: $color-green-1;
   border-radius: $border-radius-1;
   border: 1px solid $color-green-1;
-  padding:  $pd-1 $pd-3;
-
+  padding: $pd-y $pd-x;
 }
