--- a/src/scss/Helpers/_variables.scss
+++ b/src/scss/Helpers/_variables.scss
@@ -12,6 +12,9 @@ $color-black-1: #000021;
 $color-black-2: #000000;
 
 $color-white-overlay: rgba(100, 100, 111, 0.2);
+$color-white-overlay-1: rgba(14, 30, 37, 0.12);
+$color-white-overlay-2: rgba(14, 30, 37, 0.32);
+
 // ---------- FONT ----------------
 $font-size-html: 16px;
 $fs-1: 0.5rem;
@@ -36,6 +39,7 @@ $pd-4: 2rem;
 $pd-5: 2.5rem;
 $pd-6: 3rem;
 $pd-7: 4rem;
+$pd-9: 9rem;
 
 // ---------- MARGIN ----------------
 $mr-1: 0.5rem;
