--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,6 @@
 @import "./Layouts/footer";
 @import "./Layouts/about";
 @import "./Layouts/home";
-@import "./Layouts/foodmenu";
+@import "./Layouts/menu";
 @import "./Layouts/testimonials";
 //Components
