--- a/src/scss/Helpers/_variables.scss
+++ b/src/scss/Helpers/_variables.scss
@@ -50,9 +50,9 @@ $mr-5: 2.5rem;
 $mr-6: 3rem;
 
 // ---------- BORDER ----------------
-$boder-1: 1rem;
-$boder-2: 1,5rem;
-$boder-3: 2rem;
+$boder-1: 1px;
+$boder-2: 1.5px;
+$boder-3: 2px;
 $border-radius: 1rem;
 $border-radius-1: 1.5rem;
 $border-radius-2: 2rem;
