--- a/src/scss/Helpers/_mixin.scss
+++ b/src/scss/Helpers/_mixin.scss
@@ -5,10 +5,10 @@
   line-height: $lh;
 }
 
-@mixin borderText($color,$bg-color,$boder,$pd-y, $pd-x) {
+@mixin borderText($color,$bg-color,$border-radius,$boder,$pd-y, $pd-x) {
   color: $color;
   background-color: $bg-color;
-  border-radius: $border-radius-1;
+  border-radius: $border-radius;
   border: $boder solid $color-green-1;
   padding: $pd-y $pd-x;
   font-weight: $font-weight-600; 
