--- a/src/scss/Base/_reset.scss
+++ b/src/scss/Base/_reset.scss
@@ -46,3 +46,9 @@ h6 {
   max-width: 1366px;
   margin: 0 auto;
 }
+
+.bg-img {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
