--- a/src/scss/Helpers/_mixin.scss
+++ b/src/scss/Helpers/_mixin.scss
@@ -5,11 +5,27 @@
   line-height: $lh;
 }
 
-@mixin borderText($color,$bg-color,$border-radius,$boder,$pd-y, $pd-x) {
+@mixin borderText($color, $bg-color, $border-radius, $boder, $pd-y, $pd-x) {
   color: $color;
   background-color: $bg-color;
   border-radius: $border-radius;
   border: $boder solid $color-green-1;
   padding: $pd-y $pd-x;
-  font-weight: $font-weight-600; 
+  font-weight: $font-weight-600;
+}
+@mixin styleIcon() {
+  width: 3rem;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: $color-green-1;
+  font-size: $fs-4;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+  &:hover {
+    background-color: $color-green-1;
+    color: $color-white;
+    border-radius: $border-radius;
+  }
 }
