--- a/src/scss/Helpers/_variables.scss
+++ b/src/scss/Helpers/_variables.scss
@@ -14,6 +14,7 @@ $color-black-2: #000000;
 $color-white-overlay: rgba(100, 100, 111, 0.2);
 $color-white-overlay-1: rgba(14, 30, 37, 0.12);
 $color-white-overlay-2: rgba(14, 30, 37, 0.32);
+$color-white-overlay-3: rgb(100, 100, 100, 0.19);
 
 // ---------- FONT ----------------
 $font-size-html: 16px;
