--- a/src/scss/Layouts/_header.scss
+++ b/src/scss/Layouts/_header.scss
@@ -1,13 +1,16 @@
 .header{
     background-color: $color-white-3;
-    
-    .container{
-       
+    box-shadow: $color-white-overlay-3 0px 2px 8px 2px;
+    position: fixed;
+    width: 100%;
+    z-index: 99;
+    .container{     
         padding:$pd-1;
         display: flex;
         align-items: center;  
-        justify-content: space-between;
+        justify-content: space-around;
         .logo{
+            
             @include styleText($color-green-1,$fs-5 ,$font-weight-700,none);
         }
         .main__menu{          
@@ -20,7 +23,7 @@
                 }      
                 a{  
                 
-                 margin: 0 40px;
+                 margin: 0 30px;
                  @include styleText($color-gray-1,$fs-2,$font-weight-600,none);
                 }      
             }
