--- a/src/scss/Helpers/_variables.scss
+++ b/src/scss/Helpers/_variables.scss
@@ -51,9 +51,9 @@ $mr-5: 2.5rem;
 $mr-6: 3rem;
 
 // ---------- BORDER ----------------
-$boder-1: 1px;
-$boder-2: 1.5px;
-$boder-3: 2px;
+$border-1: 1px;
+$border-2: 1.5px;
+$border-3: 2px;
 
 $border-radius: 1rem;
 $border-radius-1: 1.5rem;
