--- a/src/scss/Layouts/_header.scss
+++ b/src/scss/Layouts/_header.scss
@@ -16,10 +16,9 @@
         .main__menu{          
             li{        
                 list-style-type: none;
-                
                 .active{
                     margin: 0 20px;
-                   @include borderText($color-white,$color-green-1,$border-radius,$boder-1,$pd-1,$pd-3);
+                   @include borderText($color-white,$color-green-1,$border-radius,$border-1,$pd-1,$pd-3);
                 }      
                 a{  
                 
