--- a/src/scss/Helpers/_variables.scss
+++ b/src/scss/Helpers/_variables.scss
@@ -14,7 +14,7 @@ $color-black-2: #000000;
 $color-white-overlay: rgba(100, 100, 111, 0.2);
 $color-white-overlay-1: rgba(14, 30, 37, 0.12);
 $color-white-overlay-2: rgba(14, 30, 37, 0.32);
-$color-white-overlay-3: rgb(100, 100, 100, 0.19);
+$color-white-overlay-3: rgba(100, 100, 100, 0.2);
 
 // ---------- FONT ----------------
 $font-size-html: 16px;
@@ -25,6 +25,7 @@ $fs-4: 2rem;
 $fs-5: 2.5rem;
 $fs-6: 3rem;
 $fs-7: 7rem;
+$fs-8: 6.5rem;
 
 $font-weight-bold: bold;
 $font-weight-normal: normal;
@@ -50,6 +51,7 @@ $mr-3: 1.5rem;
 $mr-4: 2rem;
 $mr-5: 2.5rem;
 $mr-6: 3rem;
+$mr-7: 5rem;
 
 // ---------- BORDER ----------------
 $border-1: 1px;
