--- a/src/scss/Helpers/_variables.scss
+++ b/src/scss/Helpers/_variables.scss
@@ -58,9 +58,11 @@ $border-1: 1px;
 $border-2: 1.5px;
 $border-3: 2px;
 
+
 $border-radius: 1rem;
 $border-radius-1: 1.5rem;
 $border-radius-2: 2rem;
+$border-radius-3: 0rem;
 
 // ---------- LINE-HEIGHT ----------------
 $line-height-normal: normal;
