--- a/src/scss/Helpers/_variables.scss
+++ b/src/scss/Helpers/_variables.scss
@@ -61,6 +61,7 @@ $border-3: 2px;
 $border-radius: 1rem;
 $border-radius-1: 1.5rem;
 $border-radius-2: 2rem;
+$border-radius-3: 2.5rem;
 
 // ---------- LINE-HEIGHT ----------------
 $line-height-normal: normal;
