--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,4 +13,6 @@
 @import "./Layouts/home";
 @import "./Layouts/menu";
 @import "./Layouts/testimonials";
-@import "./Layouts/gobal"; //Components
+@import "./Layouts/global"; 
+
+//Components
