--- a/src/scss/Layouts/_footer.scss
+++ b/src/scss/Layouts/_footer.scss
@@ -25,6 +25,7 @@
           $color-green-1,
           $border-radius,
           $border-1,
+          $color-green-1,
           $pd-1,
           $pd-2
         );
