--- a/src/scss/Helpers/_mixin.scss
+++ b/src/scss/Helpers/_mixin.scss
@@ -5,11 +5,11 @@
   line-height: $lh;
 }
 
-@mixin borderText($color, $bg-color, $border-radius, $boder,$border-color, $pd-y, $pd-x) {
+@mixin borderText($color, $bg-color, $border-radius, $border,$border-color, $pd-y, $pd-x) {
   color: $color;
   background-color: $bg-color;
   border-radius: $border-radius;
-  border: $boder solid $border-color;
+  border: $border solid $border-color;
   padding: $pd-y $pd-x;
   font-weight: $font-weight-600;
 }
