--- a/src/scss/Helpers/_variables.scss
+++ b/src/scss/Helpers/_variables.scss
@@ -44,6 +44,7 @@ $pd-7: 4rem;
 $pd-8: 9rem;
 $pd-9: 11rem;
 $pd-10: 13rem;
+$pd-11: 5rem;
 
 // ---------- MARGIN ----------------
 $mr-1: 0.5rem;
@@ -53,6 +54,7 @@ $mr-4: 2rem;
 $mr-5: 2.5rem;
 $mr-6: 3rem;
 $mr-7: 5rem;
+$mr-8: 11rem;
 
 // ---------- BORDER ----------------
 $border-1: 1px;
@@ -60,7 +62,7 @@ $border-2: 1.5px;
 $border-3: 2px;
 $border-4: 2.5px;
 
-$border-radius: 1rem;
+$border-radius: 1.1rem;
 $border-radius-1: 1.5rem;
 $border-radius-2: 2rem;
 $border-radius-3: 2.5rem;
