--- a/src/scss/Layouts/_header.scss
+++ b/src/scss/Layouts/_header.scss
@@ -7,71 +7,46 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    &__logo{
+   .container{
+       display: flex;
+       justify-content: space-around;
+       align-items: center;
+       margin: 0;
+       padding: 0;
+    .header__logo{
          @include styleText($color-green-1,$fs-5 ,$font-weight-700,none);
     }
-     &__menu{
+     .header__menu{
         display: flex;
-        align-items: center;
         list-style: none;
-        
-     }
-     &__menu--item{
-         @include borderText($color-gray-1,$color-white-3,$border-radius-2,$border-1, $color-white-3,$pd-1,$pd-3);  
-         transition: all 1s;
-         &:hover {  
+         .header__menu--item{
+          @include borderText($color-gray-1,$color-white-3,none,$border-1, $color-white-3,$pd-1,$pd-3);  
+         transition: all 0.5s ease-in-out;
+         background-color: transparent;
+         margin-right:$mr-2;
+         cursor: pointer;
+           .header__menu--link {
+            &:hover{
+              color: $color-white;
+               }
+              } 
+        } 
+        .active{
+           background-color: $color-green-1;
+           color: $color-white-1;  
+           border-radius: $border-radius ;
+        }
+       
+        .header__menu--item:hover {  
           background-color: $color-green-1;
           color: $color-white-1;
-      }
-       
+          border-radius: $border-radius;
+          }
      }
-     &__menu--item:not(:first-child) {
-      margin-left: $mr-7;
-
-      
-    }
-    &__menu--link {
-     // color: $color-gray-1 ;
-     &:hover{
-       color: $color-white;
-     }
-      
-    }
+   
      .header__cart{
-       
-            @include styleText($color-green-1,$fs-4,$font-weight-600,none);
-        }
+            @include styleIcon();
     }
+  }
+   }
     
-         
-    //    padding: 0 !important;
-    //     display: flex;
-    //     align-items: center;  
-    //     justify-content: space-around;
-    //     .logo{            
-    //         @include styleText($color-green-1,$fs-5 ,$font-weight-700,none);
-    //     }
-    //     .main__menu{ 
-    //         ul{
-    //                display: flex; 
-    //         }                    
-    //         li{  
-    //             @include styleText($color-gray-1,$fs-2,$font-weight-600,none);  
-    //             list-style: none;
-    //             margin: 0 $mr-3;
-    //             .container{
-    //             &:hover a{
-    //                 @include borderText($color-white-1,$color-green-1,$border-radius-2,$border-1,$pd-1,$pd-3);
-    //             }
-    //         } 
-           
-            
-    //     }
-    //     .header__cart{
-    //         @include styleText($color-green-1,$fs-4,$font-weight-600,none);
-    //     }
-       
-    // }
-
-// }
-// ?
