--- a/src/scss/Layouts/_home.scss
+++ b/src/scss/Layouts/_home.scss
@@ -2,7 +2,7 @@
     padding-top: $pd-8;
     height: 780px;
     .container{
-        max-width: 1180px;
+        //max-width: 1180px;
         .home__title{
             padding: 0;
             .home__text{
