--- a/src/scss/Layouts/_about.scss
+++ b/src/scss/Layouts/_about.scss
@@ -1,26 +1,27 @@
 .about {
-    padding: $pd-9 0 $pd-9 $pd-9;
-    display: flex;
-   background-color: $color-white-3 !important;
-    &__image{
-        .about__img{
-            height: 450px;
-            width: 1500px;
+    background-color: $color-white-3;
+    padding: $pd-8 0;
+    .container{
+        .about__image{
+           .about__img{
+            //transform: translate(80px,20px);
+            transform: translateX(80px);
+            height: 400px;
+            width: 700px;
             box-shadow:0px 2px 10px 6px $color-white-overlay;
+            } 
         }
-        
-    }
-    &__content{
-         width:2000px;
-         transform: translate(-80px,100px);
+        .about__content{
+            // width:2000px;
+         transform: translate(-20px,110px);
          text-align: center;
-         height: 18rem;
+         height: 15rem;
          box-shadow: $color-white-overlay-3 0px 2px 8px 2px;
-         padding: $pd-7 $pd-11;
+         padding: $pd-5 $pd-7;
           @include borderText($color-black-1,$color-white,$border-radius-2,$border-2,$color-white-1,none,none);
 
-        &--title{
-            padding-bottom: $pd-5;
+        .about__content--title{
+            padding-bottom: $pd-3;
             color: $color-gray-1;
             @include styleText($color-gray-1,$fs-4,$font-weight-bold,$lh-2);
             .about__tittle--color{
@@ -28,9 +29,9 @@
             }
 
             }
-        &--text{
+        .about__content--text{
             font-weight: $font-weight-300;
         }
-   
+        }
     }
 }
