--- a/src/scss/Helpers/_mixin.scss
+++ b/src/scss/Helpers/_mixin.scss
@@ -29,3 +29,16 @@
     border-radius: $border-radius;
   }
 }
+
+
+@mixin responsive($screen) {
+  @if map-has-key($map:$breakpoints, $key:$screen ){
+    $value: map-get($map:$breakpoints, $key:$screen );
+    @media screen and (max-width: $value) {
+      @content;
+    }
+  }
+  @else{
+    @warn "`{$screen}` isn't in breakpoints";
+  }
+}
