--- a/src/scss/Layouts/_home.scss
+++ b/src/scss/Layouts/_home.scss
@@ -1,30 +1,29 @@
-.home{
+.home {
     padding-top: $pd-8;
     height: 780px;
-    .container{
+
+    .container {
         //max-width: 1180px;
-        .home__title{
-            padding: 0 ;
-            .home__text{
-       
-        @include styleText($color-green-1,$fs-8,$font-weight-bold,$lh-2);
+        .home__title {
+            padding: 0;
+
+            .home__text {
+                //white-space: nowrap;
+                @include styleText($color-green-1, $fs-8, $font-weight-bold, $lh-2);
+            }
+            .home__content {
+                margin-bottom: $mr-4;
+                line-height: $lh-2;
+            }
+            .home__button {
+                margin-top: $mr-2;
+                transition: all 0.5s;
+                @include borderText($color-green-1, $color-white, $border-radius, 2px, $color-green-1, $pd-1, $pd-5);
+                &:hover {
+                    color: $color-white;
+                    background-color: $color-green-1;
+                }
+            }
         }
-        .home__content{
-        margin-bottom: $mr-4;
-        line-height: $lh-2; 
-        }
-        .home__button{
-            margin-top: $mr-2;
-            transition: all 0.5s;
-            @include borderText($color-green-1,$color-white,$border-radius,2px,$color-green-1,$pd-1,$pd-5);
-             &:hover{
-            color: $color-white;
-            background-color: $color-green-1;
-        }
-        }
-        }
-         
-       
     }
-   
 }
